--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -30,6 +30,14 @@
     <string name="end_date_TEMPLATE">End Date: %s</string>
     <!-- Fly From Template where %s is the origin e.g. "Fly from Boston,MA" -->
     <string name="fly_from_TEMPLATE">Fly from %1$s</string>
+    <!-- Choose flight dates -->
+    <string name="choose_flight_dates">Choose flight dates</string>
+    <!-- Hotels Tonight -->
+    <string name="hotels_tonight">Hotels Tonight</string>
+    <!-- Missing flight info header string "Missing search information!" -->
+    <string name="missing_flight_info_header">Missing search information!</string>
+    <!-- Missing flight info message "Please select a flight origin, and a valid date or date range."-->
+    <string name="missing_flight_info_message">Please select a flight origin, and a valid date or date range.</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
