--- a/project/src/lastMinute/res/values-en-rGB/strings.xml
+++ b/project/src/lastMinute/res/values-en-rGB/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
     <string name="call_lm_customer_support">Call lastminute.com.au Customer Support</string>
@@ -13,7 +13,7 @@
     <string name="lm_website">lastminute.com.au Website</string>
     <string name="lm_app_support">lastminute.com.au App Support</string>
     <string name="lm_copyright_TEMPLATE">© Copyright 2012-%1$s lastminute.com.au\nAll rights reserved.</string>
-    <string name="lm_info_url">http://www.lastminute.com.au/</string>
+    <string name="lm_info_url">https://www.lastminute.com/</string>
 
     <!-- Label for logout confirmation -->
     <string name="logout_confirmation_lm">Are you sure you want to log out of your lastminute.com.au account?</string>
@@ -21,14 +21,14 @@
     <!-- Expedia booking fee -->
     <string name="lm_booking_fee">lastminute.com.au Booking Fee</string>
 
-    <string name="error_flight_unhandled_lm_TEMPLATE">Sorry, we don\'t seem to be able to process your order right now. Please try again or call lastminute.com.au Customer Support and quote this itinerary number: %s</string>
-    <string name="error_server_lm">Sorry, we could not connect to lastminute.com.au\'s servers.  Please try again later.</string>
+    <string name="error_flight_unhandled_lm_TEMPLATE">Sorry, we don’t seem to be able to process your order right now. Please try again or call lastminute.com.au Customer Support and quote this itinerary number: %s</string>
+    <string name="error_server_lm">Sorry, we could not connect to lastminute.com.au’s servers.  Please try again later.</string>
 
     <!-- save billing info message -->
     <string name="save_billing_lm_info_message">Save this payment method under your lastminute.com.au account to speed up future purchases?</string>
 
     <!-- Save traveler name Template -->
-    <string name="save_traveler_lm_message_TEMPLATE">Save %1$s\'s information under your lastminute.com.au account to speed up future purchases?</string>
+    <string name="save_traveler_lm_message_TEMPLATE">Save %1$s’s information under your lastminute.com.au account to speed up future purchases?</string>
 
     <!-- Part of the description, showing the itinerary #.  %s is the itinerary number, e.g. "Expedia Itinerary #: 3532532" -->
     <string name="calendar_flight_desc_itinerary_TEMPLATE_lm">lastminute.com.au Itinerary #: %s</string>
@@ -39,7 +39,7 @@
     <string name="dialog_message_logged_out_and_cleared_private_data_lm">You are logged out of your lastminute.com.au account, and all saved billing and contact information has been removed.</string>
 
     <!-- For some reason the API failed and we couldn't complete the search -->
-    <string name="e3_error_hotel_offers_hotel_service_failure_lm">We\'re sorry, but we couldn\'t connect to lastminute.com.au. Please try again.</string>
+    <string name="e3_error_hotel_offers_hotel_service_failure_lm">We’re sorry, but we couldn’t connect to lastminute.com.au. Please try again.</string>
 
     <!-- Phone Fragment Header-->
     <string name="nav_accommodation">Accommodation</string>
@@ -60,12 +60,12 @@
     <!-- The merchant name to display to the user for Google Wallet -->
     <string name="merchant_name">lastminute.com.au</string>
 
-    <string name="error_flight_no_longer_available_lm">We\'re really sorry, your flight is no longer available from lastminute.com.au.</string>
+    <string name="error_flight_no_longer_available_lm">We’re really sorry, your flight is no longer available from lastminute.com.au.</string>
 
-    <string name="error_flights_no_longer_available_lm">We\'re really sorry, one of your flights is no longer available from lastminute.com.au.</string>
+    <string name="error_flights_no_longer_available_lm">We’re really sorry, one of your flights is no longer available from lastminute.com.au.</string>
 
     <!-- Message displayed when all the hotel rooms at a hotel are sold out -->
-    <string name="error_hotel_is_now_sold_out_lm">We\&apos;re sorry but this hotel is no longer available from lastminute.com.au.</string>
+    <string name="error_hotel_is_now_sold_out_lm">We’re sorry but this hotel is no longer available from lastminute.com.au.</string>
     <!--A message stating this hotel is Not currently available on lastminute.com.au -->
     <string name="not_currently_available_lm">Not currently available from lastminute.com.au</string>
     <!-- A message stating this hotel is sold out on lastminute.com.au -->
@@ -74,7 +74,7 @@
     <string name="not_currently_available_lm_TEMPLATE">Not available from lastminute.com.au %s</string>
 
     <!-- Missing strings for lastminute.com.au from Expedia-->
-    <string name="tell_a_friend_body_lm">Hi there,\n\nCheck out lastminute.com.au Hotels for iPhone and Android phones. It\'s FREE and you can easily search and book rooms from over 140,000 hotels all over the world. It\'s the easiest way to book hotel rooms on your phone.</string>
+    <string name="tell_a_friend_body_lm">Hi there,\n\nCheck out lastminute.com.au Hotels for iPhone and Android phones. It’s FREE and you can easily search and book rooms from over 140,000 hotels all over the world. It’s the easiest way to book hotel rooms on your phone.</string>
     <string name="tell_a_friend_subject_lm">lastminute.com.au Hotels</string>
     <string name="restricted_profile_login_message_lm">To log in to lastminute.com.au, you must use an unrestricted user profile on your device.</string>
     <string name="loading_lm_account">Loading lastminute.com.au Account</string>
