--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -2767,7 +2767,7 @@
     <!-- Message that tells user they failed to sign in -->
     <string name="sign_in_failed">Please sign in again</string>
     <!-- Label for sign out confirmation -->
-    <string name="sign_out_confirmation">Are you sure you want to sign out of your Expedia account?</string>
+    <string name="sign_out_confirmation_TEMPLATE">Are you sure you want to sign out of your {brand} account?</string>
     <!-- Label for Expedia +blue rewards program name -->
     <string name="Expedia_plus_blue">Expedia +blue</string>
     <!-- Label for Expedia +silver rewards program name -->
