--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -277,6 +277,8 @@
     <string name="lx_cost_breakdown_button_text">Done</string>
     <!-- LX checkout price breakdown for POS same as pickup location templates-->
     <string name="lx_checkout_breakdown_price_disclaimer_text">Rates quoted in %s.</string>
+    <!-- LX checkout price breakdown Stale Ticket Prices Disclaimer-->
+    <string name="lx_checkout_breakdown_stale_ticket_prices_disclaimer_text">Break down prices might not be updated.</string>
     <!-- Checkout price breakdown Total Price Label -->
     <string name="checkout_breakdown_total_price">Total Price</string>
     <!-- Text for error toolbar-->
